--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,6 @@
-registry = https://registry.npmjs.org/
+fund=false
+engine-strict=true
 always-auth = true
+registry = https://registry.npmjs.org/
 email = ${NPM_USER}
 _auth = ${NPM_PASSWORD}
