--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "lint": "eslint .",
     "major": "npm --no-git-tag-version version major",
     "minor": "npm --no-git-tag-version version minor",
-    "patch": "npm --no-git-tag-version version patch"
+    "patch": "npm --no-git-tag-version version patch",
+    "ci": "echo \"No CI\" && exit 1",
+    "test": "echo \"No tests\" && exit 1"
   },
   "repository": {
     "type": "git",
